prevent images from getting too large on page

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,10 @@
+img {
+  max-width: min-content;
+}
+
+.menu {
+  justify-content: center;
+}
 .hero-search-filter {
   background: url(../images/hero-background.jpg) center center no-repeat;
   height: 400px;
